Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124471

Transparency doesn't work on Uniform Color

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 FF
    • 6.8
    • Graphs: 3D
    • None
    • 0c4ce9b1c (dev)

    Description

      The issue can be checked with qmltheme.

      • Open Bars Graph
      • Click Uniform Color and try changing the transparency value -> Transparency won't affected by it.

      It only happens in OptimizationDefault mode

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dilek Dilek Akcay
            dilek Dilek Akcay
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes