Fix transparency issue in qmltheme

Fixes: QTBUG-124471
Change-Id: Idd593d29bec0c4c0ff36e6bd690011de2bdcb386
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>